-GetPage with wheres for non db properties. -Assign document to creator. -Filter by user working.

--- a/frontend/main/app/styles/attachments-flatly.sass
+++ b/frontend/main/app/styles/attachments-flatly.sass
@@ -7,7 +7,7 @@
 		border-bottom: solid 1px #E5E5E5
 		width: 100%
 		font-size: .9em
-		padding: 2px 0
+		padding: 0 0 2px
 		margin: 0
 		a
 			display: block
