--- a/frontend/main/app/views/cqalist.html
+++ b/frontend/main/app/views/cqalist.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="col-sm-3">
                             <label>Product Line</label>
-                            <p class="form-control-static">{{::item.FSItem.ItemRef1 + ' ' + item.FSItem.ITEM_REF1_DESC}}</p>
+                            <p class="form-control-static">{{::item.FSItem.ItemReference1 + ' ' + item.FSItem.ITEM_REF1_DESC}}</p>
                         </div>
                         <div class="col-sm-4">
                             <label>Reoccurring Issue</label>
@@ -107,7 +107,7 @@
             <form class="navbar-form navbar-right">
                 <div class="form-group">
                     <button type="button" class="btn btn-default btn-sm" ng-click="create();">New</button>
-                    <button type="button" class="btn btn-default btn-sm" ng-click="clearFilters();">Clear Filters</button>
+                    <button type="button" class="btn btn-default btn-sm" ng-click="clearFilters();refresh();">Clear Filters</button>
                 </div>
             </form>
             <ul class="nav navbar-nav navbar-right">
