--- a/frontend/main/app/views/emailaccount.html
+++ b/frontend/main/app/views/emailaccount.html
@@ -12,19 +12,19 @@
         <div class="form-group">
             <div class="col-xs-12">
                 <label>Password</label>
-                <input type="password" class="form-control" ng-model="baseEntity.Password" />
+                <input type="password" class="form-control" ng-model="baseEntity.EmailPassword" />
             </div>
         </div>
         <br>
         <br>
         <div class="form-group">
             <div class="col-xs-12">
-                <input type="button" class="btn btn-default btn-block" value="Send Test Email">
+                <input type="button" class="btn btn-default btn-block" value="Send Test Email" ng-click="sendTestEmail(baseEntity)">
             </div>
         </div>
         <div class="form-group">
             <div class="col-xs-12">
-                <input type="button" class="btn btn-primary btn-block" value="Save">
+                <input type="button" class="btn btn-primary btn-block" value="Save" ng-click="save(baseEntity);">
             </div>
         </div>
     </form>
