--- a/frontend/main/app/views/entertraveler.html
+++ b/frontend/main/app/views/entertraveler.html
@@ -1,1 +1,17 @@
-<p>This is the EnterTraveler view.</p>
+{{::screenTitle}}
+<dir-pagination-controls on-page-change="pageChanged(newPageNumber)">
+    <span>{{item.itemIndex}}</span>
+    <button class="btn btn-default btn-xs" ng-click="removeItem(item);$event.stopPropagation();">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+    </button>
+    <button class="btn btn-default btn-xs" ng-click="openItem(item);$event.stopPropagation();">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+    </button>
+</dir-pagination-controls>
+<div hide-when-loading="isLoading" class="CQAListItem panel panel-default" dir-paginate="item in baseList | itemsPerPage: filterOptions.perPage track by item.id" total-items="filterOptions.itemsCount" current-page="filterOptions.page">
+</div>
+<dir-pagination-controls></dir-pagination-controls>
+<button type="button" class="btn btn-default btn-sm" ng-click="create();">New</button>
+<button type="button" class="btn btn-default btn-sm" ng-click="clearFilters();refresh();">Clear Filters</button>
+
+<attachments-box owner-entity="baseEntity" kind="CQALineAttachments" after-upload="saveAfterUpload(oEntity, oDeferred)" read-only="false" when-change="on_attachments_change(oEntity)" after-delete="afterRemoveFile(oEntity)"></attachments-box>
