--- a/frontend/main/app/views/entertraveler.html
+++ b/frontend/main/app/views/entertraveler.html
@@ -1,17 +1,34 @@
 {{::screenTitle}}
 <dir-pagination-controls on-page-change="pageChanged(newPageNumber)">
-    <span>{{item.itemIndex}}</span>
-    <button class="btn btn-default btn-xs" ng-click="removeItem(item);$event.stopPropagation();">
-        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-    </button>
-    <button class="btn btn-default btn-xs" ng-click="openItem(item);$event.stopPropagation();">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-    </button>
+    
+
 </dir-pagination-controls>
+<br>
+<button type="button" class="btn btn-default btn-sm" ng-click="create();">New</button>
+<!-- <button type="button" class="btn btn-default btn-sm" ng-click="clearFilters();refresh();">Clear Filters</button>
+ -->
 <div hide-when-loading="isLoading" class="CQAListItem panel panel-default" dir-paginate="item in baseList | itemsPerPage: filterOptions.perPage track by item.id" total-items="filterOptions.itemsCount" current-page="filterOptions.page">
+<div class="well"  >
+        <span>{{item.itemIndex}}</span>
+<pre>{{item | json:4}}</pre>
+
+<p>Traveler Number: {{item.TravelerNumber}}</p>
+<p>Date: {{item.ConvertedCreatedDate | date:'short'}}</p>
+<p>Date_CreatedOn: {{item.InfoTrack.Date_CreatedOn | date:'short'}} </p>
+
+        <button class="btn btn-default btn-xs" ng-click="removeItem(item);$event.stopPropagation();">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        </button>
+        <button class="btn btn-default btn-xs" ng-click="openItem(item);$event.stopPropagation();">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button>
+    </div>
+
 </div>
 <dir-pagination-controls></dir-pagination-controls>
 <button type="button" class="btn btn-default btn-sm" ng-click="create();">New</button>
-<button type="button" class="btn btn-default btn-sm" ng-click="clearFilters();refresh();">Clear Filters</button>
-
-<attachments-box owner-entity="baseEntity" kind="CQALineAttachments" after-upload="saveAfterUpload(oEntity, oDeferred)" read-only="false" when-change="on_attachments_change(oEntity)" after-delete="afterRemoveFile(oEntity)"></attachments-box>
+<!-- <button type="button" class="btn btn-default btn-sm" ng-click="clearFilters();refresh();">Clear Filters</button> -->
+ <attachments-box owner-entity="baseEntity" kind="TravelerDocs" after-upload="saveAfterUpload(oEntity, oDeferred)" read-only="false" when-change="on_attachments_change(oEntity)" after-delete="afterRemoveFile(oEntity)"></attachments-box>
+<modal title="Traveler Header" modal-id="modal-traveler" ok-label="OK" max-width="80%">
+    <traveler-header></traveler-header>
+</modal>
