--- a/frontend/main/app/views/travelerheader.html
+++ b/frontend/main/app/views/travelerheader.html
@@ -1,1 +1,40 @@
-<p>This is the TravelerHeader view.</p>
+<!-- <pre>
+    {{baseEntity |json:4}}
+</pre> -->
+<div class="conteiner-fluid">
+    <form class="form-horizontal" role="form">
+        <div class="form-group">
+            <div class="col-sm-3 ">
+                <label>Traveler Number:</label>
+                <p class="form-control-static">{{baseEntity.TravelerNumber}}</p>
+                <input type="text" class="form-control" ng-model="baseEntity.TravelerNumber">
+            </div>
+            <div class="col-sm-3 col-sm-offset-6">
+                <label>Date Created:</label>
+                <p class="form-control-static">{{item.InfoTrack.Date_CreatedOn | date:'short'}}</p>
+                <!-- <input type="datetime-local" class="form-control" ng-model="baseEntity.ConvertedCreatedDate"> -->
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-3">
+                <label>Part Number:</label>
+                <p class="form-control-static">{{baseEntity.PartNumber}}</p>
+                <input type="text" class="form-control" ng-model="baseEntity.PartNumber">
+            </div>
+            <div class="col-sm-7">
+                <label>Part Description:</label>
+                <p class="form-control-static">{{baseEntity.PartDescription}}</p>
+                <input type="text" class="form-control" ng-model="baseEntity.PartDescription">
+            </div>
+        </div>
+
+        <div>
+           <!--  <attachments-box owner-entity="baseEntity" kind="" after-upload="saveAfterUpload(oEntity, oDeferred)" read-only="false" when-change="on_a ttachments_change(oEntity)" after-delete="afterRemoveFile(oEntity)"></attachments-box>-->
+
+        </div>
+        <!-- 
+            <div>
+                <button type="button" class="btn btn-default btn-sm" ng-click="create();">Save</button>
+            </div> -->
+    </form>
+</div>
